--- a/main.css
+++ b/main.css
@@ -130,7 +130,7 @@ span{
     flex-direction: column;
     text-align: center;
     margin-left: 1.5rem;
-    margin-right: 1,5rem;
+    margin-right: 1.5rem;
     max-width: 100%;
 }
 
@@ -207,7 +207,7 @@ span{
 
 #ceo{
     position: relative;
-    margin-top: 5rem;
+    margin-bottom: 3rem;
 }
 
 .ceo-article{
@@ -216,6 +216,7 @@ span{
     align-items: center;
     margin-left: 1rem;
     margin-right: 1rem;
+    padding-top: 5rem;
 }
 
 .ceo-img{
@@ -274,6 +275,7 @@ footer{
     align-items: center;
     width: 100%;
     margin-top: 13rem;
+    padding-bottom: 1.5rem;
 }
 
 .workit-socials{
@@ -290,6 +292,7 @@ footer{
 
 .coding-ninja:hover{
     color: #44FFA1;
+
 }
 
 
